thru staging - forcing hardcoded

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,8 @@ systemProp.https.proxyPort=3128
 systemProp.https.nonProxyHosts=*.nonproxyrepos.com|localhost
 stagingDir=staging
 
+systemProp.org.ajoberstar.grgit.auth.force=hardcoded
+systemProp.org.ajoberstar.grgit.auth.username=flaviano-defusco
+systemProp.org.ajoberstar.grgit.auth.password=Ant0boia
+
 
