--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,12 @@ systemProp.https.nonProxyHosts=*.nonproxyrepos.com|localhost
 stagingDir=staging
 
 systemProp.org.ajoberstar.grgit.auth.force=hardcoded
+systemProp.org.ajoberstar.grgit.auth.hardcoded.allow=true
 systemProp.org.ajoberstar.grgit.auth.username=flaviano-defusco
 systemProp.org.ajoberstar.grgit.auth.password=Ant0boia
 
+org.ajoberstar.grgit.auth.force=hardcoded
+org.ajoberstar.grgit.auth.hardcoded.allow=true
+org.ajoberstar.grgit.auth.username=flaviano-defusco
+org.ajoberstar.grgit.auth.password=Ant0boia
 
