ancora con le prop

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ stagingDir=staging
 
 systemProp.org.ajoberstar.grgit.auth.force=hardcoded
 systemProp.org.ajoberstar.grgit.auth.hardcoded.allow=true
-org.ajoberstar.grgit.auth.username=flaviano-defusco
-org.ajoberstar.grgit.auth.password=Ant0boia
+systemProp.org.ajoberstar.grgit.auth.username=flaviano-defusco
+systemProp.org.ajoberstar.grgit.auth.password=Ant0boia
+
 
